objects/copado__Continuous_Integration__c.object
<CustomObject>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <defaultValue>&quot;master&quot;</defaultValue>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Check_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Destination_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Continuous Integrations</relationshipLabel>
        <relationshipName>Continuous_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Files_to_be_deployed__c</fullName>
        <inlineHelpText>For supported metadata items only.</inlineHelpText>
        <label>Files to be deployed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deploy all Files</fullName>
                    <default>true</default>
                    <label>Deploy all Files</label>
                </value>
                <value>
                    <fullName>Deploy only Committed Files</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>Continuous Integrations</relationshipLabel>
        <relationshipName>Continuous_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Last_Build_Task_Duration__c</fullName>
        <label>Last Build Task Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Post_Failed_Deployment_Jobs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Failed Deployment Jobs</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Continuous Integrations (Post Failed Deployment Jobs)</relationshipLabel>
        <relationshipName>Post_Failed_Continuous_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Post_Success_Deployment_Jobs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Success Deployment Jobs</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Continuous Integrations (Post Success Deployment Jobs)</relationshipLabel>
        <relationshipName>Post_Success_Continuous_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Pre_Deployment_Jobs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Deployment Jobs</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Continuous Integrations</relationshipLabel>
        <relationshipName>Pre_Continuous_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Pre_Deployment_Options__c</fullName>
        <label>Pre Deployment Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Run build task deployment only if pre deployment job is successful</fullName>
                    <default>true</default>
                    <label>Run build task deployment only if pre deployment job is successful</label>
                </value>
                <value>
                    <fullName>Always run build task deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Run_All_Tests__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this checkbox is checked, all apex tests will be run as part of the build.</inlineHelpText>
        <label>Run All Tests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Continuous Integration</label>
    <nameField>
        <label>Continuous Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continuous Integrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>